[package]
name = "dzp"
description = "Create DZP's from JPG's"
documentation = "https://docs.rs/bitflags"
readme = "README.md"
repository = "https://github.com/360-geo/dzp"
version = "0.1.0"
edition = "2021"
authors = ["George Boot <george@360geo.nl>"]

[dependencies]
image = { version = "0.25.9", default-features = false, features = ["jpeg"]}
nalgebra = "0.33"
ndarray = "0.16"
ndarray-stats = "0.5"
rayon = "1.10"
thiserror = "1"
zip = "2"
clap = { version = "4.5.6", features = ["derive"] }
webp = "0.3.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
